# spatialtree

./: .gitignore  3d.blend  3d.blend1  CMakeLists.txt  README.md  coderunner  points.json  spatial_tree.h  spatialtree  spatialtree.cpp  spatialtree.hpp  spatialtree.out  tempCodeRunnerFile.cpp
.ipynb_checkpoints/: visualize-checkpoint.ipynb
data/: points_1.json  points_annotated.json
include/: spatial_tree.h  spatial_tree_utils.hpp
tests/: a  generate_random_input.py  input.txt  test.cpp  test.py
visualization/: visualize.ipynb  visualize.py
